src/test/resources/typeSystemTestModels/invalid/classes/ClassNoFinalSuperClass.java
package typeSystemTestModels.invalid.classes;

import java.lang.String;

public class ClassNoFinalSuperClass extends String {

}
